# trampoline

./: .gitignore  README.md  shell.nix
dispatcher/: Cargo.toml
dispatcher/src/: main.rs  producer.rs  serve.rs
dispatcher/src/config/: config.rs  mod.rs
dispatcher/src/core/: forwarder.rs  handler.rs  handler_repo.rs  mod.rs  rune.rs  worker.rs  worker_matcher.rs
dispatcher/src/data/: data.rs  mod.rs
examples/email-pipeline-coordinator/: Cargo.toml  dispatcher.toml.example  pipeline.rn
examples/email-pipeline-coordinator/src/: main.rs
examples/email-pipeline-worker/: Cargo.toml  dispatcher.toml.example
examples/email-pipeline-worker/src/: main.rs
