[package]
name = "dispatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
toml = "0.8"
serde_derive = "1.0"

# Pulsar
env_logger = "0.9"
pulsar = "4.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.6"
futures = "0.3"

reqwest = "0.12"

async-trait = "0.1"

# Rune
rune = "0.13.2"
rune-modules = { version = "0.13.2", features = ["http", "json"] }